# open-unlearning

./: pyproject.toml
configs/: distill-gemma.yaml  relearn-gemma.yaml  train-gemma.yaml  unlearn-gemma.yaml
configs/experiment/distill/tofu/: default-gemma.yaml
configs/experiment/examples/: tofu_eval.yaml
configs/experiment/finetune/tofu/: default-gemma.yaml  relearn.yaml
configs/experiment/unlearn/tofu/: default-gemma.yaml
configs/model/: gemma-2-2b.yaml
configs/paths/: default.yaml
configs/trainer/: distill.yaml  relearn.yaml
src/evals/metrics/: base.py
src/trainer/: __init__.py  distill.py
